--- a/style.css
+++ b/style.css
@@ -14,7 +14,14 @@ header {
   height: 80px;
   width: 100%;
   align-items: center;
-  padding: 0 30px;
+}
+
+nav {
+  padding-right: 35px;
+}
+
+img {
+  padding-left: 30px;
 }
 
 span {
