--- a/style.css
+++ b/style.css
@@ -124,3 +124,29 @@ nav span {
 .stories .text {
   height: 250px;
 }
+
+/* News Bites */
+
+.news {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.news h3 {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 40px;
+}
+
+.bites {
+  padding: 11px 20px;
+  border-bottom: 1px solid #000;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  width: 200px;
+}
+
+/* Footer */ 
