Add final project edits.

--- a/style.css
+++ b/style.css
@@ -74,6 +74,8 @@ nav span {
 /* Image-Content */
 
 .image {
+  display: flex;
+  align-items: center;
   height: 300px;
   font-family: Georgia;
   font-weight: bold;
@@ -105,6 +107,19 @@ nav span {
 
 /* Text-Content */
 
+p.narrative {
+  font-family: Georgia;
+  font-size: 17px;
+}
+
+.text h2 {
+  font-size: 30px;
+  font-weight: bold;
+  font-family: Georgia;
+  font-style: normal;
+  margin: 0;
+}
+
 .head-story {
   display: flex;
   flex-direction: column;
@@ -113,6 +128,7 @@ nav span {
 .stories {
   display: flex;
   justify-content: space-between;
+  margin-top: 16px;
 }
 
 .story {
@@ -149,4 +165,36 @@ nav span {
   width: 200px;
 }
 
-/* Footer */ 
+/* Footer */
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  height: 350px;
+  width: 100%;
+}
+
+.title {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  border-right: 2px solid #fff;
+  padding-right: 25px;
+  margin-right: 20px;
+}
+
+span.menu {
+  text-decoration: underline;
+  margin: 12px;
+  }
+
+.bottom {
+    margin-bottom: 23px;
+  }
